# rspb

./: Cargo.toml  README.org
misc/: config.toml  rspb.service
src/: config.toml  main.rs  misc.rs  yarte.toml
src/api/: delete.rs  get.rs  mod.rs  modify.rs  new.rs
src/api/admin/: list.rs  mod.rs  paste.rs
src/misc/: auth.rs  mod.rs
src/page/: audio.rs  code.rs  form.rs  index.rs  mod.rs
src/storage/: mod.rs  rediscachedstorage.rs  simplestorage.rs
static/css/: rspbw.css  rspbw.css.map  rspbw.sass
static/js/: .swcrc  form.js  form.min.js
templates/: audio.hbs  code.hbs  form.hbs  index.hbs
